--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.11.8",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
@@ -18,8 +19,10 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-reanimated": "^2.0.0",
     "react-native-screens": "~2.15.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "^0.15.0",
     "react-navigation": "^4.4.4"
