--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
@@ -24,6 +26,7 @@
     "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-unimodules": "~0.12.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0",
     "react-navigation": "^4.4.4"
   },
