--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-location": "^2.0.0",
+    "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-reanimated": "^2.0.0",
     "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-unimodules": "~0.12.0",
+    "react-native-unimodules": "^0.13.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0",
     "react-navigation": "^4.4.4"
