--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "package": "com.gadai.lab_one"
+    }
   }
 }
