--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.14.3",
     "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~40.0.0",
+    "expo-constants": "^10.0.1",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
@@ -38,6 +39,7 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "metro-react-native-babel-preset": "^0.65.2",
     "react-test-renderer": "~16.13.1"
   },
   "jest": {
